--- a/SbSender/Pages/Index.razor
+++ b/SbSender/Pages/Index.razor
@@ -1,4 +1,8 @@
 ﻿@page "/"
+@using SbShared.Models
+@using SbSender.Services
+@inject IQueueService _queueService
+
 
 <PageTitle>Index</PageTitle>
 
@@ -7,3 +11,31 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+<EditForm Model="person" OnValidSubmit="@PublishMessage">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+    
+    <div class="form-group">
+        <label for="firstName">First name</label>
+        <InputText id="firstName" class="form-control"  @bind-Value="person.FirstName" /> 
+    </div>
+    
+    <div class="form-group">
+        <label for="lastName">Last name</label>
+        <InputText id="lastName" class="form-control"  @bind-Value="person.LastName" />
+    </div>
+    
+    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+</EditForm>
+
+@code
+{
+    private PersonModel person = new PersonModel();
+
+
+    private async Task PublishMessage()
+    {
+        await _queueService.SendMessageAsync(person, "personqueue");
+        person = new PersonModel();
+    }
+}
