--- a/SbSender/Pages/Index.razor
+++ b/SbSender/Pages/Index.razor
@@ -25,7 +25,7 @@ Welcome to your new app.
         <InputText id="lastName" class="form-control"  @bind-Value="person.LastName" />
     </div>
     
-    <button type="submit" class="btn btn-primary btn-block">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </EditForm>
 
 @code
